# Bitcoin-Quant-Project

./: .env.example  .env.exemple  .gitignore  Makefile  README.md  apresentação.md  deploy_guide.md  logging.conf  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily_data.yml  daily_pipeline.yml
data/accounting/: order_book.csv  portfolio_state.json
data/processed/: processed_data_2025-11-22.json  processed_data_2025-11-23.json  processed_data_2025-11-24.json  processed_data_2025-11-25.json  processed_data_2025-11-26.json  processed_data_2025-11-27.json  processed_data_2025-11-28.json  processed_data_2025-11-29.json  processed_data_2025-11-30.json  processed_data_2025-12-01.json  processed_data_2025-12-02.json  processed_data_2025-12-03.json  processed_data_2025-12-04.json  processed_data_2025-12-05.json  processed_data_2025-12-06.json  processed_data_2025-12-07.json  processed_data_2025-12-08.json  processed_data_2025-12-09.json  processed_data_2025-12-10.json  processed_data_2025-12-11.json  processed_data_2025-12-12.json  (+115 more)
docs/: roadmap.md
research/: analyze_wfa_results.py  brute_force_wfa.py  compare_onchain_composition.py  cycle_decay.py  debug_zscore_calc.py  drawdown_control.py  hurst_regime.py  medium_term_optimization.py  research_plan.md  upgrades_roadmap.md  vol_targeting.py  zscore_walkforward.py
src/: main_paper_trading.py  pipeline.py
tests/: test_confidence_portfolio.py  test_paper_trading.py  test_portfolio.py  test_production_gate.py  test_project_paths.py  test_quant_scorer.py
webapp/: README.md  app.py
(+346 files in other folders)
