[project]
name = "bitcoin-quant-project"
version = "0.1.0"
description = "A heuristic and machine learningdecision engine for Bitcoin trading"
authors = [
    {name = "Lucas Honorato", email = "lucashonoratodesouza10@gmail.com"},
]
dependencies = [
    "requests",
    "pandas",
    "python-dotenv",
    "chaindl",
    "yfinance"
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
