[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcoin-quant-project"
version = "0.1.0"
description = "A quantitative decision engine for Bitcoin trading and paper trading automation"
readme = "README.md"
authors = [
    {name = "Lucas Honorato", email = "lucashonoratodesouza10@gmail.com"},
]
dependencies = [
    "Flask",
    "Flask-Cors",
    "requests",
    "pandas",
    "python-dotenv",
    "chaindl",
    "yfinance",
    "fredapi",
    "numpy"
]
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
